Try to fix map size (overflow) / Cartridge stats

--- a/ligneeheros.css
+++ b/ligneeheros.css
@@ -81,7 +81,10 @@ h2#turn::before {
     line-height: 2em;
 }
 #people-people::after, #people-worker::after, #people-warrior::after, #people-savant::after, #people-mage::after,
-#harvest-food::after, #harvest-science::after, #stock-food::after, #stock-science::after,
+#military-power::after, #military-defense::after,
+#city-life::after, #city-defense::after,
+#harvest-food::after, #harvest-science::after,
+#stock-food::after, #stock-science::after,
 #stock-wood::after, #stock-animal::after, #stock-gem::after, #stock-paper::after, #stock-metal::after, #stock-stone::after, #stock-clay::after, #stock-medic::after {
     content: attr(data-count);
     font-weight: bold;
@@ -98,13 +101,19 @@ h2#turn::before {
     margin-left: 1em;
 }
 #cartridge .people-types,
-#cartridge .harvest, #cartridge .stock {
+#cartridge .harvest,
+#cartridge .military,
+#cartridge .city,
+#cartridge .stock {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 }
-#cartridge .harvest > div:first-child, #cartridge .stock > div:first-child {
+#cartridge .harvest > div:first-child,
+#cartridge .military > div:first-child,
+#cartridge .city > div:first-child,
+#cartridge .stock > div:first-child {
     width: 30%;
 }
 
@@ -113,27 +122,26 @@ h2#turn::before {
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-bottom: .2em;
 }
 #cartridge .people > div,
 #cartridge .people-types > div,
 #cartridge .harvest > div,
+#cartridge .military > div,
+#cartridge .city > div,
 #cartridge .stock > div:not(.stock-resources),
 #cartridge .stock-resources .group > div {
     display: flex;
     align-items: center;
     min-width: 3em;
 }
-#stock-food::before {background-position: 40% 100%;}
-#stock-science::before {background-position: 50% 100%;}
+.stock-resources svg {
+    border: .15em solid #065009;
+    border-radius: 50%;
+    padding: .15em;
+    background: white;
+}
 
-#stock-wood::before {background-position: 0% 60%;}
-#stock-animal::before {background-position: 10% 60%;}
-#stock-stone::before {background-position: 50% 60%;}
-#stock-metal::before {background-position: 40% 60%;}
-#stock-clay::before {background-position: 60% 60%;}
-#stock-paper::before {background-position: 30% 60%;}
-#stock-medic::before {background-position: 70% 60%;}
-#stock-gem::before {background-position: 20% 60%;}
 
 /********* Card zones **********/
 #cards-zone > div {
@@ -848,10 +856,11 @@ svg.svg-icon {
 
 /********* MAP **********/
 #map-zone {
-    width: 91em;
     min-width: 320px;
-    margin: -13% 5em 0;
-    transform: rotate(90deg);
+    width: 100%;
+    height: 95em;
+    overflow-y: scroll;
+    overflow-x: scroll;
 }
 
 .map-hex-grid {
@@ -861,10 +870,12 @@ svg.svg-icon {
 
 .map-hex-grid {
     position: relative;
-    width: 100%;
+    width: 91em;
     list-style-type: none;
     display: grid;
     grid-template-columns: repeat(var(--amount),1fr 2fr) 1fr;
+    margin: -9% 5em 0;
+    transform: rotate(90deg);
 }
 .map-hex-item {
     position: relative;
